Added boiler plate course website

--- a/_includes/section-skills.html
+++ b/_includes/section-skills.html
@@ -8,7 +8,7 @@
   <input type="radio" id="framework" name="filter" />
   <label class="filter-button neumorphism-button" for="framework">Frameworks</label>
   <input type="radio" id="tool" name="filter" />
-  <label class="filter-button neumorphism-button" for="tool">Tools</label>
+  <label class="filter-button neumorphism-button" for="tool">Teaching</label>
 
   {% for language in site.data.skills-languages %}
     <div skill-type="language" skill-weight="{{language.weight}}" data-aos="zoom-in">
@@ -22,7 +22,52 @@
   {% endfor %}
   {% for tool in site.data.skills-tools %}
     <div skill-type="tool" skill-weight="{{tool.weight}}" data-aos="zoom-in">
+	  <a class="highlight-link" href="{{tool.blog}}" target="_blank" rel="noreferrer">
       {{tool.name}}
+	  </a>
     </div>
   {% endfor %}
 </div>
+
+<!--<h1 class="title">{{site.skills_title}}</h1>-->
+
+<!--<div id="skills">-->
+  <!--<input type="radio" id="all" name="filter" checked />-->
+  <!--<label class="filter-button neumorphism-button" for="all">All</label>-->
+  <!--[><input type="radio" id="teaching" name="filter" checked /><]-->
+  <!--[><label class="filter-button neumorphism-button" for="language">Area</label><]-->
+  <!--[><input type="radio" id="framework" name="filter" /><]-->
+  <!--[><label class="filter-button neumorphism-button" for="framework">Frameworks</label><]-->
+  <!--<input type="radio" id="teaching" name="filter" />-->
+  <!--<label class="filter-button neumorphism-button" for="teaching">Teaching</label>-->
+  <!--<input type="radio" id="language" name="filter" />-->
+  <!--<label class="filter-button neumorphism-button" for="language">Language</label>-->
+  <!--[><input type="radio" id="tool" name="filter" /><]-->
+  <!--[><label class="filter-button neumorphism-button" for="tool">Tools</label><]-->
+
+  <!--[>{% for framework in site.data.skills-frameworks %}<]-->
+    <!--[><div skill-type="framework" skill-weight="{{framework.weight}}" data-aos="zoom-in"><]-->
+      <!--[>{{framework.name}}<]-->
+    <!--[></div><]-->
+  <!--[>{% endfor %}<]-->
+  <!--{% for teaching in site.data.skills-teaching %}-->
+    <!--<div skill-type="teaching" skill-weight="{{teaching.weight}}" data-aos="zoom-in">-->
+      <!--{{teaching.name}}-->
+    <!--</div>-->
+    <!--{% if teaching.name %}-->
+    <!--<a class="highlight-link" href="{{teaching.blog | prepend: site.baseurl}}"  target="_blank" rel="noreferrer">-->
+        <!--blog-->
+      <!--</a>-->
+    <!--{% endif %}-->
+  <!--{% endfor %}-->
+  <!--{% for language in site.data.skills-languages %}-->
+    <!--<div skill-type="language" skill-weight="{{language.weight}}" data-aos="zoom-in">-->
+      <!--{{language.name}}-->
+    <!--</div>-->
+  <!--{% endfor %}-->
+  <!--[>{% for tool in site.data.skills-tools %}<]-->
+    <!--[><div skill-type="tool" skill-weight="{{tool.weight}}" data-aos="zoom-in"><]-->
+      <!--[>{{tool.name}}<]-->
+    <!--[></div><]-->
+  <!--[>{% endfor %}<]-->
+<!--</div>-->
