--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -103,6 +103,17 @@
           <span class="label">Twitter</span>
         </a>
       {% endif %}
+      <a class="social-link" aria-label="Prospective Students" href="{{ '/phd-positions/' | prepend: site.baseurl }}">
+        <svg viewBox="0 0 200 200" class="circle">
+          <circle cx="100" cy="100" r="80" />
+        </svg>
+        <div class="social">
+          <svg class="social-svg" viewBox="0 0 48 48">
+            <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ '/assets/img/solid.svg#user-graduate' | prepend: site.baseurl }}"></use>
+          </svg>
+        </div>
+        <span class="label">Prospective Students</span>
+      </a>
     </div>
   </div>
 </div>
