Add supervision style page and unify tab fonts

--- a/_includes/section-skills.html
+++ b/_includes/section-skills.html
@@ -30,4 +30,7 @@
   <div skill-type="prospective" data-aos="zoom-in">
     <a class="highlight-link" href="{{ '/phd-positions/' | prepend: site.baseurl }}">Prospective Phd Students</a>
   </div>
+  <div skill-type="prospective" data-aos="zoom-in">
+    <a class="highlight-link" href="{{ '/supervision-style/' | prepend: site.baseurl }}">Supervision Style</a>
+  </div>
 </div>
