--- a/_includes/section-skills.html
+++ b/_includes/section-skills.html
@@ -17,7 +17,13 @@
   {% endfor %}
   {% for student in site.data.skills-students %}
     <div skill-type="students" skill-weight="{{student.weight}}" data-aos="zoom-in">
-      {{student.name}}
+      {% if student.url %}
+        <a class="highlight-link" href="{{student.url}}" target="_blank" rel="noreferrer">
+          {{student.name}}
+        </a>
+      {% else %}
+        {{student.name}}
+      {% endif %}
     </div>
   {% endfor %}
   {% for teaching in site.data.skills-teaching %}
@@ -29,5 +35,8 @@
   {% endfor %}
   <div skill-type="prospective" data-aos="zoom-in">
     <a class="highlight-link" href="{{ '/phd-positions/' | prepend: site.baseurl }}">Prospective Phd Students</a>
+  </div>
+  <div skill-type="prospective" data-aos="zoom-in">
+    <a class="highlight-link" href="{{ '/supervision-style/' | prepend: site.baseurl }}">Supervision Style</a>
   </div>
 </div>
