--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -406,6 +406,18 @@ a {
 
   div[skill-type="research"] {
     color: #e84a5f;
+
+    ul.research-interests-list {
+      margin: 0;
+      padding-left: 1.5rem;
+      list-style: disc;
+    }
+
+    ul.research-interests-list li {
+      margin-bottom: 0.5rem;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
   }
   div[skill-type="students"] {
     color: #8d9db6;
